Fix width of timer where it is squashed on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ main {
 
 .moves-area {
   text-align: center;
-  width: 36%;
+  width: 39%;
   border-radius: 8px;
   padding: 5px;
   margin: 8px 4px 0px 4px;
@@ -60,7 +60,7 @@ main {
 
 .time-area {
   text-align: center;
-  width: 36%;
+  width: 39%;
   border-radius: 8px;
   padding: 5px;
   margin: 8px 4px 0px 4px;
